--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Cad</string>
+    <string name="down_message">单击屏幕指定文字位置</string>
+    <string name="title_dialog">请输入文本内容</string>
+    <string name="ok_dialog">确定</string>
+    <string name="cancel_dialog">取消</string>
 </resources>
