--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="title_dialog">请输入文本内容</string>
     <string name="ok_dialog">确定</string>
     <string name="cancel_dialog">取消</string>
+
+    <string-array name="tabs">
+        <item>最近打开</item>
+        <item>我的收藏</item>
+        <item>全部文件</item>
+    </string-array>
 </resources>
