--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
         <item>我的收藏</item>
         <item>全部文件</item>
     </string-array>
+
+    <string name="recent_empty">最近没有打开文件</string>
 </resources>
